--- a/c_b_git/gitops-k8s/grafana-deployment-service.yml
+++ b/c_b_git/gitops-k8s/grafana-deployment-service.yml
@@ -49,6 +49,13 @@ spec:
               subPath: grafana-dashboard.yml
             - name: grafana-dashboards
               mountPath: /etc/grafana/dashboards
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "100m"
+            limits:
+              memory: "512Mi"
+              cpu: "250m"
           readinessProbe:
             httpGet:
               path: /api/health
