--- a/c_b_git/gitops-k8s/loki-configuration.yml
+++ b/c_b_git/gitops-k8s/loki-configuration.yml
@@ -18,11 +18,11 @@ data:
 
     common:
       instance_addr: 127.0.0.1
-      path_prefix: /loki
+      path_prefix: /var/loki
       storage:
         filesystem:
-          chunks_directory: /loki/chunks
-          rules_directory: /loki/rules
+          chunks_directory: /var/loki/chunks
+          rules_directory: /var/loki/rules
       replication_factor: 1
       ring:
         kvstore:
@@ -38,7 +38,7 @@ data:
             prefix: index_
             period: 24h
 
-    ruler:
-      alertmanager_url: http://localhost:9093
+    # ruler:  # Commented out until alertmanager is deployed
+      # alertmanager_url: http://alertmanager:9093
     analytics:
       reporting_enabled: false
