--- a/c_b_git/gitops-k8s/prometheus-configuration.yml
+++ b/c_b_git/gitops-k8s/prometheus-configuration.yml
@@ -10,8 +10,8 @@ data:
       scrape_interval: 10s
       evaluation_interval: 10s
 
-    rule_files:
-      - "alert_rules.yml"
+    # rule_files:
+      # - "alert_rules.yml"  # Commented out until alert rules are provided
 
     scrape_configs:
       - job_name: "otel-collector"
@@ -44,8 +44,8 @@ data:
         static_configs:
           - targets: [ 'redis-exporter:9121' ]
 
-    alerting:
-      alertmanagers:
-        - static_configs:
-            - targets:
-                - alertmanager:9093
+    # alerting:  # Commented out until alertmanager is deployed
+      # alertmanagers:
+        # - static_configs:
+            # - targets:
+                # - alertmanager:9093
