--- a/c_b_git/gitops-k8s/prometheus-deployment-service.yml
+++ b/c_b_git/gitops-k8s/prometheus-deployment-service.yml
@@ -28,6 +28,13 @@ spec:
               subPath: prometheus.yml
             - name: prometheus-data
               mountPath: /prometheus
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
           args:
             - '--config.file=/etc/prometheus/prometheus.yml'
             - '--storage.tsdb.path=/prometheus'
@@ -43,7 +50,8 @@ spec:
           configMap:
             name: prometheus-config
         - name: prometheus-data
-          emptyDir: { }
+          persistentVolumeClaim:
+            claimName: prometheus-pvc
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
