Revert "version manifest deployed"
This reverts commit ace77e0403a44d9c89dc402cbe01ba0d284d2745.

--- a/c_b_git/gitops-k8s/chalk-board-shared-configmap.yml
+++ b/c_b_git/gitops-k8s/chalk-board-shared-configmap.yml
@@ -10,7 +10,7 @@ data:
   CHALK_BOARD_DATABASE_USERNAME: "username"
   KEYCLOAK_DB: "chalk_keycloak"
   KEYCLOAK_USERNAME: "username"
-  KEYCLOAK_REALM: "http://chalk-keycloak/realms/chalk-board"
+  KEYCLOAK_REALM: "http://chalk-keycloak:7080/realms/chalk-board"
   KEYCLOAK_DATABASE_URL: "jdbc:postgresql://postgres/chalk_keycloak"
   AUTH_CLIENT_ID: "gateway-client"
   AUTH_CLIENT_NAME: "JSL - Learning Center"
