--- a/c_b_git/gitops-k8s/tempo-deployment-service.yml
+++ b/c_b_git/gitops-k8s/tempo-deployment-service.yml
@@ -78,7 +78,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-    storageClassName: standard  # Commented out to use default storage class
+  # storageClassName: standard  # Commented out to use default storage class
 ---
 apiVersion: v1
 kind: Service
