--- a/c_b_git/gitops-k8s/loki-configuration.yml
+++ b/c_b_git/gitops-k8s/loki-configuration.yml
@@ -19,11 +19,11 @@ data:
 
     common:
       instance_addr: 127.0.0.1
-      path_prefix: /var/loki
+      path_prefix: /loki
       storage:
         filesystem:
-          chunks_directory: /var/loki/chunks
-          rules_directory: /var/loki/rules
+          chunks_directory: /loki/chunks
+          rules_directory: /loki/rules
       replication_factor: 1
       ring:
         kvstore:
@@ -39,8 +39,8 @@ data:
             prefix: index_
             period: 24h
 
-    # ruler:  # Commented out until alertmanager is deployed
-      # alertmanager_url: http://alertmanager:9093
+    ruler:
+      alertmanager_url: http://localhost:9093
     analytics:
       reporting_enabled: false
 
