--- a/c_b_git/gitops-k8s/tempo-configuration.yml
+++ b/c_b_git/gitops-k8s/tempo-configuration.yml
@@ -18,7 +18,7 @@ data:
         - roles:
             - frontend-search
           memcached:
-            addresses: memcached:11211
+            addresses: dns+memcached:11211
 
     query_frontend:
       mcp_server:
@@ -45,23 +45,23 @@ data:
         jaeger: # the receives all come from the OpenTelemetry collector.  more configuration information can
           protocols: # be found there: https://github.com/open-telemetry/opentelemetry-collector/tree/main/receiver
             thrift_http: #
-              endpoint: "0.0.0.0:14268" # for a production deployment you should only enable the receivers you need!
+              endpoint: "tempo:14268" # for a production deployment you should only enable the receivers you need!
             grpc:
-              endpoint: "0.0.0.0:14250"
+              endpoint: "tempo:14250"
             thrift_binary:
-              endpoint: "0.0.0.0:6832"
+              endpoint: "tempo:6832"
             thrift_compact:
-              endpoint: "0.0.0.0:6831"
+              endpoint: "tempo:6831"
         zipkin:
-          endpoint: "0.0.0.0:9411"
+          endpoint: "tempo:9411"
         otlp:
           protocols:
             grpc:
-              endpoint: "0.0.0.0:4317"
+              endpoint: "tempo:4317"
             http:
-              endpoint: "0.0.0.0:4318"
+              endpoint: "tempo:4318"
         opencensus:
-          endpoint: "0.0.0.0:55678"
+          endpoint: "tempo:55678"
 
     ingester:
       max_block_duration: 5m # cut the headblock when this much time passes. this is being set for demo purposes and should probably be left alone normally
