--- a/c_b_git/gitops-k8s/loki-deployment-service.yml
+++ b/c_b_git/gitops-k8s/loki-deployment-service.yml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,63 +15,35 @@ spec:
       labels:
         app: loki
     spec:
-      securityContext:
-        # User ID 10001 is the default for Grafana products
-        fsGroup: 10001
       containers:
         - name: loki
-          # It is best practice to use a specific version instead of 'latest'
-          image: grafana/loki:2.9.2
-          imagePullPolicy: IfNotPresent
+          image: grafana/loki:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 3100
               name: http-metrics
           command:
             - "/usr/bin/loki"
-          args:
             - "-config.file=/etc/loki/local-config.yaml"
-            - "-target=all" # Explicitly run in monolithic mode
           volumeMounts:
             - name: loki-config-volume
               mountPath: /etc/loki
-            - name: loki-data
-              mountPath: /loki
           readinessProbe:
-            # Use a standard HTTP GET probe instead of wget
-            httpGet:
-              path: /ready
-              port: http-metrics
+            exec:
+              command:
+                - wget
+                - --quiet
+                - --tries=1
+                - --output-document=-
+                - http://localhost:3100/ready
             initialDelaySeconds: 5
             periodSeconds: 5
             timeoutSeconds: 1
             failureThreshold: 10
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
       volumes:
         - name: loki-config-volume
           configMap:
             name: loki-config
-        - name: loki-data
-          persistentVolumeClaim:
-            claimName: loki-pvc
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: loki-pvc
-  namespace: chalk-board-namespace
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      # Use an appropriate storage size for your needs
-      storage: 5Gi
 ---
 apiVersion: v1
 kind: Service
@@ -90,68 +61,3 @@ spec:
       name: http-metrics
   selector:
     app: loki
-
-
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  name: loki
-#  namespace: chalk-board-namespace
-#  labels:
-#    app: loki
-#spec:
-#  replicas: 1
-#  selector:
-#    matchLabels:
-#      app: loki
-#  template:
-#    metadata:
-#      labels:
-#        app: loki
-#    spec:
-#      containers:
-#        - name: loki
-#          image: grafana/loki:latest
-#          imagePullPolicy: Always
-#          ports:
-#            - containerPort: 3100
-#              name: http-metrics
-#          command:
-#            - "/usr/bin/loki"
-#            - "-config.file=/etc/loki/local-config.yaml"
-#          volumeMounts:
-#            - name: loki-config-volume
-#              mountPath: /etc/loki
-#          readinessProbe:
-#            exec:
-#              command:
-#                - wget
-#                - --quiet
-#                - --tries=1
-#                - --output-document=-
-#                - http://localhost:3100/ready
-#            initialDelaySeconds: 5
-#            periodSeconds: 5
-#            timeoutSeconds: 1
-#            failureThreshold: 10
-#      volumes:
-#        - name: loki-config-volume
-#          configMap:
-#            name: loki-config
-#---
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: loki
-#  namespace: chalk-board-namespace
-#  labels:
-#    app: loki
-#spec:
-#  type: ClusterIP
-#  ports:
-#    - port: 3100
-#      targetPort: http-metrics
-#      protocol: TCP
-#      name: http-metrics
-#  selector:
-#    app: loki
