--- a/c_b_git/gitops-k8s/loki-deployment-service.yml
+++ b/c_b_git/gitops-k8s/loki-deployment-service.yml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,15 +15,13 @@ spec:
       labels:
         app: loki
     spec:
+      # Add this securityContext to the Pod spec
       securityContext:
-        # Use a security context to set the correct UID and GID for Loki.
-        # The user ID 10001 is the default for Grafana products.
         fsGroup: 10001
       containers:
         - name: loki
-          # It is best practice to use a specific version instead of 'latest'
-          image: grafana/loki:2.9.2
-          imagePullPolicy: IfNotPresent
+          image: grafana/loki:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 3100
               name: http-metrics
@@ -32,28 +29,23 @@ spec:
             - "/usr/bin/loki"
           args:
             - "-config.file=/etc/loki/local-config.yaml"
-            - "-target=all" # Explicitly run in monolithic mode
           volumeMounts:
             - name: loki-config-volume
               mountPath: /etc/loki
             - name: loki-data
               mountPath: /loki
           readinessProbe:
-            # Use a standard HTTP GET probe instead of wget
-            httpGet:
-              path: /ready
-              port: http-metrics
+            exec:
+              command:
+                - wget
+                - --quiet
+                - --tries=1
+                - --output-document=-
+                - http://localhost:3100/ready
             initialDelaySeconds: 5
             periodSeconds: 5
             timeoutSeconds: 1
             failureThreshold: 10
-          resources:
-            requests:
-              memory: "512Mi"
-              cpu: "250m"
-            limits:
-              memory: "1Gi"
-              cpu: "500m"
       volumes:
         - name: loki-config-volume
           configMap:
