--- a/c_b_git/gitops-k8s/loki-configuration.yml
+++ b/c_b_git/gitops-k8s/loki-configuration.yml
@@ -9,12 +9,11 @@ data:
 
     server:
       http_listen_port: 3100
-      grpc_listen_port: 9095 # Recommended to have a gRPC port for Loki
+      grpc_listen_port: 9095
       http_listen_address: 0.0.0.0
 
     common:
       instance_addr: 127.0.0.1
-      # path_prefix is deprecated for monolithic setups; leave it out.
       replication_factor: 1
       ring:
         kvstore:
@@ -23,19 +22,19 @@ data:
     schema_config:
       configs:
         - from: 2020-10-24
-          # Use boltdb-shipper for scalable, local persistent storage
           store: boltdb-shipper
           object_store: filesystem
-          schema: v12 # Use a recent, stable schema version
+          schema: v12
           index:
             prefix: index_
             period: 24h
 
     storage_config:
       boltdb_shipper:
-        # These directories will be located inside the persistent volume.
         active_index_directory: /loki/boltdb-shipper-active
         cache_location: /loki/boltdb-shipper-cache
+        # `shared_store` is an attribute of `boltdb_shipper`, but for the `filesystem` it's not nested.
+        # It was likely mispositioned due to older config examples.
         shared_store: filesystem
       filesystem:
         directory: /loki/chunks
@@ -46,113 +45,7 @@ data:
       max_global_streams_per_user: 100000
 
     ruler:
-      # Use a dummy URL for the ruler to avoid errors if you don't have Alertmanager
       alertmanager_url: http://localhost:9093
 
-    # It's good practice to leave this commented out unless specifically enabled
-    # analytics:
-    #   reporting_enabled: false
-
-
-#apiVersion: v1
-#kind: ConfigMap
-#metadata:
-#  name: loki-config
-#  namespace: chalk-board-namespace
-#data:
-#  local-config.yaml: |
-#    auth_enabled: false
-#
-#    limits_config:
-#      allow_structured_metadata: true
-#      max_streams_per_user: 100000
-#      max_global_streams_per_user: 100000
-#
-#    server:
-#      http_listen_port: 3100
-#      # Change to 0.0.0.0 to listen on all network interfaces
-#      http_listen_address: 0.0.0.0
-#
-#    common:
-#      instance_addr: 127.0.0.1
-#      path_prefix: /loki
-#      storage:
-#        filesystem:
-#          chunks_directory: /loki/chunks
-#          rules_directory: /loki/rules
-#      replication_factor: 1
-#      ring:
-#        kvstore:
-#          store: inmemory
-#
-#    schema_config:
-#      configs:
-#        - from: 2020-10-24
-#          store: tsdb
-#          object_store: filesystem
-#          schema: v13
-#          index:
-#            prefix: index_
-#            period: 24h
-#
-#    ruler:
-#      alertmanager_url: http://localhost:9093
-#    analytics:
-#      reporting_enabled: false
-#
-#
-##apiVersion: v1
-##kind: ConfigMap
-##metadata:
-##  name: loki-config
-##  namespace: chalk-board-namespace
-##data:
-##  local-config.yaml: |
-##    auth_enabled: false
-##
-##    # https://grafana.com/docs/loki/latest/configure/#limits_config
-##    limits_config:
-##      allow_structured_metadata: true
-##      max_streams_per_user: 100000
-##      max_global_streams_per_user: 100000
-##
-##    server:
-##      http_listen_port: 3100
-##
-##    common:
-##      instance_addr: 127.0.0.1
-##      path_prefix: /loki
-##      storage:
-##        filesystem:
-##          chunks_directory: /loki/chunks
-##          rules_directory: /loki/rules
-##      replication_factor: 1
-##      ring:
-##        kvstore:
-##          store: inmemory
-##
-##    schema_config:
-##      configs:
-##        - from: 2020-10-24
-##          store: tsdb
-##          object_store: filesystem
-##          schema: v13
-##          index:
-##            prefix: index_
-##            period: 24h
-##
-##    ruler:
-##      alertmanager_url: http://localhost:9093
-##
-##    # By default, Loki will send anonymous, but uniquely-identifiable usage and configuration
-##    # analytics to Grafana Labs. These statistics are sent to https://stats.grafana.org/
-##    #
-##    # Statistics help us better understand how Loki is used, and they show us performance
-##    # levels for most users. This helps us prioritize features and documentation.
-##    # For more information on what's sent, look at
-##    # https://github.com/grafana/loki/blob/main/pkg/usagestats/stats.go
-##    # Refer to the buildReport method to see what goes into a report.
-##    #
-##    # If you would like to disable reporting, uncomment the following lines:
-##    analytics:
-##      reporting_enabled: false
+    analytics:
+      reporting_enabled: false
