--- a/c_b_git/gitops-k8s/loki-configuration.yml
+++ b/c_b_git/gitops-k8s/loki-configuration.yml
@@ -5,15 +5,24 @@ metadata:
   namespace: chalk-board-namespace
 data:
   local-config.yaml: |
+    # Paste the content of your local-config.yaml file here
     auth_enabled: false
+    # https://grafana.com/docs/loki/latest/configure/#limits_config
+    limits_config:
+      allow_structured_metadata: true
+      max_streams_per_user: 100000
+      max_global_streams_per_user: 100000
 
     server:
       http_listen_port: 3100
-      grpc_listen_port: 9095
-      http_listen_address: 0.0.0.0
 
     common:
       instance_addr: 127.0.0.1
+      path_prefix: /loki
+      storage:
+        filesystem:
+          chunks_directory: /loki/chunks
+          rules_directory: /loki/rules
       replication_factor: 1
       ring:
         kvstore:
@@ -22,30 +31,14 @@ data:
     schema_config:
       configs:
         - from: 2020-10-24
-          store: boltdb-shipper
+          store: tsdb
           object_store: filesystem
-          schema: v12
+          schema: v13
           index:
             prefix: index_
             period: 24h
 
-    storage_config:
-      boltdb_shipper:
-        active_index_directory: /loki/boltdb-shipper-active
-        cache_location: /loki/boltdb-shipper-cache
-        # `shared_store` is an attribute of `boltdb_shipper`, but for the `filesystem` it's not nested.
-        # It was likely mispositioned due to older config examples.
-        shared_store: filesystem
-      filesystem:
-        directory: /loki/chunks
-
-    limits_config:
-      allow_structured_metadata: true
-      max_streams_per_user: 100000
-      max_global_streams_per_user: 100000
-
     ruler:
       alertmanager_url: http://localhost:9093
-
     analytics:
       reporting_enabled: false
