--- a/c_b_git/gitops-k8s/chalk-board-shared-configmap.yml
+++ b/c_b_git/gitops-k8s/chalk-board-shared-configmap.yml
@@ -10,11 +10,11 @@ data:
   CHALK_BOARD_DATABASE_USERNAME: "username"
   KEYCLOAK_DB: "chalk_keycloak"
   KEYCLOAK_USERNAME: "username"
-  KEYCLOAK_REALM: "http://chalk-keycloak:7080/realms/chalk-board"
+  KEYCLOAK_REALM: "http://chalk-keycloak/realms/chalk-board"
   KEYCLOAK_DATABASE_URL: "jdbc:postgresql://postgres/chalk_keycloak"
   AUTH_CLIENT_ID: "gateway-client"
   AUTH_CLIENT_NAME: "JSL - Learning Center"
-  AUTH_CLIENT_REDIRECT_URI: "http://chalk-keycloak:7080/login/oauth2/code/keycloak"
+  AUTH_CLIENT_REDIRECT_URI: "http://chalk-keycloak/login/oauth2/code/keycloak"
   AUTH_CLIENT_AUTHORIZATION_GRANT_TYPE: "authorization_code"
   OTEL_COLLECTOR_METRICS_URL: "http://otel-collector:4318/v1/metrics"
   OTEL_COLLECTOR_TRACES_URL: "http://otel-collector:4318/v1/traces"
