--- a/c_b_git/gitops-k8s/tempo-deployment-service.yml
+++ b/c_b_git/gitops-k8s/tempo-deployment-service.yml
@@ -19,7 +19,6 @@ spec:
         fsGroup: 10001
       containers:
         - name: tempo
-          # It is best practice to use a specific version instead of 'latest'
           image: grafana/tempo:latest
           imagePullPolicy: Always
           command:
@@ -53,15 +52,6 @@ spec:
             limits:
               memory: "1Gi"
               cpu: "500m"
-          # Startup probe to give the container enough time to start
-          startupProbe:
-            httpGet:
-              path: /ready
-              port: 3200
-            initialDelaySeconds: 15
-            periodSeconds: 10
-            failureThreshold: 10
-          # Readiness probe checks if Tempo is ready to handle traffic
           readinessProbe:
             httpGet:
               path: /ready
@@ -69,7 +59,7 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 5
             timeoutSeconds: 1
-            failureThreshold: 5
+            failureThreshold: 10
       volumes:
         - name: tempo-config-volume
           configMap:
@@ -88,6 +78,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
+  # storageClassName: standard # Commented out to use default storage class
 ---
 apiVersion: v1
 kind: Service
@@ -125,126 +116,6 @@ spec:
       targetPort: 9411
   selector:
     app: tempo
-
-
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  name: tempo
-#  namespace: chalk-board-namespace
-#  labels:
-#    app: tempo
-#spec:
-#  replicas: 1
-#  selector:
-#    matchLabels:
-#      app: tempo
-#  template:
-#    metadata:
-#      labels:
-#        app: tempo
-#    spec:
-#      securityContext:
-#        fsGroup: 10001
-#      containers:
-#        - name: tempo
-#          image: grafana/tempo:latest
-#          imagePullPolicy: Always
-#          command:
-#            - "/tempo"
-#          args:
-#            - "-config.file=/etc/tempo.yml"
-#            - "-target=all" # Explicitly run in monolithic mode
-#          ports:
-#            - containerPort: 14268
-#              name: jaeger-http
-#            - containerPort: 3200
-#              name: tempo-http
-#            - containerPort: 9095
-#              name: grpc-storage
-#            - containerPort: 4317
-#              name: otlp-grpc
-#            - containerPort: 4318
-#              name: otlp-http
-#            - containerPort: 9411
-#              name: zipkin
-#          volumeMounts:
-#            - name: tempo-config-volume
-#              mountPath: /etc/tempo.yml
-#              subPath: tempo.yml
-#            - name: tempo-data
-#              mountPath: /var/tempo
-#          resources:
-#            requests:
-#              memory: "512Mi"
-#              cpu: "250m"
-#            limits:
-#              memory: "1Gi"
-#              cpu: "500m"
-#          readinessProbe:
-#            httpGet:
-#              path: /ready
-#              port: 3200
-#            initialDelaySeconds: 5
-#            periodSeconds: 5
-#            timeoutSeconds: 1
-#            failureThreshold: 10
-#      volumes:
-#        - name: tempo-config-volume
-#          configMap:
-#            name: tempo-config
-#        - name: tempo-data
-#          persistentVolumeClaim:
-#            claimName: tempo-pvc
-#---
-#apiVersion: v1
-#kind: PersistentVolumeClaim
-#metadata:
-#  name: tempo-pvc
-#  namespace: chalk-board-namespace
-#spec:
-#  accessModes: ["ReadWriteOnce"]
-#  resources:
-#    requests:
-#      storage: 5Gi
-#  # storageClassName: standard # Commented out to use default storage class
-#---
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: tempo
-#  namespace: chalk-board-namespace
-#  labels:
-#    app: tempo
-#spec:
-#  type: ClusterIP
-#  ports:
-#    - name: jaeger-http
-#      protocol: TCP
-#      port: 14268
-#      targetPort: 14268
-#    - name: tempo-http
-#      protocol: TCP
-#      port: 3200
-#      targetPort: 3200
-#    - name: grpc-storage
-#      protocol: TCP
-#      port: 9095
-#      targetPort: 9095
-#    - name: otlp-grpc
-#      protocol: TCP
-#      port: 4317
-#      targetPort: 4317
-#    - name: otlp-http
-#      protocol: TCP
-#      port: 4318
-#      targetPort: 4318
-#    - name: zipkin
-#      protocol: TCP
-#      port: 9411
-#      targetPort: 9411
-#  selector:
-#    app: tempo
 #
 #
 ##apiVersion: apps/v1
